Update restaurant name to include '&' character

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ h1{
 <body>
 
 <div class="container">
-  <h1>Uzbek Restaurant Bali</h1>
+  <h1>Uz&Bek Restaurant Bali</h1>
   <div class="gold-line"></div>
 
   <div class="lang-switch">
